# Jira-Sprint-Reporter

./: .gitignore  Makefile  README.md  main.py
Jira-Sprint-Reporter/: .env  .gitignore  README.md  pyproject.toml
Jira-Sprint-Reporter/jira_sprint_reporter/: queries.py
Jira-Sprint-Reporter/utilities/: utils.py
entities/: __init__.py  jira_issue.py  sprint_report_api.py  team_info.py
jira_sprint_reporter/: queries.py  sprint_report_queries.py
poetry-demo/: pyproject.toml
poetry-demo/entities/: jira_issue.py
poetry-demo/poetry_demo/: __init__.py  queries.py
poetry-demo/tests/: __init__.py  test_entities.py  test_queries.py
poetry-demo/utilities/: utils.py
templates/: sprint_report_template.py
tests/: test_entities.py  test_queries.py  test_sprint_report_api.py  test_templates.py  test_utils.py
tests/json_files/: 6363-sprints.json  intgpt-109.json  qppi-boards.json  sprint-36928.json  sprint-40267.json
utilities/: utils.py
