[tool.poetry]
name = "jira-sprint-reporter"
version = "0.1.0"
description = "Jira reporter application to generate statistics and metrics"
authors = ["mikejmnz24 <4935341+mikejmz24@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^8.1.1"
python-dotenv = "^1.0.1"
neovim = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
